kube/production/service-db.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: production
spec:
  ports: 
    - port: 5432
      targetPort: 7966

---

kind: Endpoints
apiVersion: v1
metadata:
  name: postgres
  namespace: production
subsets:
  - addresses:
      - ip: 34.83.85.66
    ports:
      - port: 7966
