kube/production/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: production
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: horekk/webapp:v0.8
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
---

apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: production
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_challenge-iw-te_group_challenge-iw_francecentral
spec:
  loadBalancerIP: 20.74.90.61
  type: LoadBalancer
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 3000
