kube/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress-static
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - challenge.francecentral.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: challenge.francecentral.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: webapp
            port: 
              number: 80
        path: /
